@@ -1,3 +1,6 @@
+2009-11-26 Chris Allegretta <chrisa@asty.org>
+	* winio.c (edit_scroll): Adjust for long lines when scrolling.
+
 2009-11-26 Jordi Mallach <jordi@gnu.org>
 	* doc/man/*: Update all man pages to escape unescapred hyphens.
 
